{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 9,
  "lineage": "f8f9bc74-6d7c-738c-d626-fbecb84360c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:228067644494:internet-gateway/igw-045ce7164f28b1cc4",
            "id": "igw-045ce7164f28b1cc4",
            "owner_id": "228067644494",
            "tags": {
              "Name": "env"
            },
            "tags_all": {
              "Name": "env"
            },
            "vpc_id": "vpc-04f9ef32abbe86796"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:228067644494:route-table/rtb-0925acf76274a3509",
            "id": "rtb-0925acf76274a3509",
            "owner_id": "228067644494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045ce7164f28b1cc4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "env"
            },
            "tags_all": {
              "Name": "env"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f9ef32abbe86796"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0a4868615765b2c",
            "route_table_id": "rtb-0925acf76274a3509",
            "subnet_id": "subnet-004c9ef8caed40606"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.routes",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a4a5b79a455fda",
            "route_table_id": "rtb-0925acf76274a3509",
            "subnet_id": "subnet-0a5cdde53b3d9eb4f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.routes",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:228067644494:security-group/sg-093e6ae2a7bc2a1f5",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093e6ae2a7bc2a1f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "env",
            "name_prefix": "",
            "owner_id": "228067644494",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f9ef32abbe86796"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:228067644494:subnet/subnet-004c9ef8caed40606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004c9ef8caed40606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228067644494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "env-1"
            },
            "tags_all": {
              "Name": "env-1"
            },
            "vpc_id": "vpc-04f9ef32abbe86796"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:228067644494:subnet/subnet-0a5cdde53b3d9eb4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5cdde53b3d9eb4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228067644494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "env-2"
            },
            "tags_all": {
              "Name": "env-2"
            },
            "vpc_id": "vpc-04f9ef32abbe86796"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:228067644494:vpc/vpc-04f9ef32abbe86796",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01e47d27837b97e73",
            "default_route_table_id": "rtb-0fcd6f5c6c7833aff",
            "default_security_group_id": "sg-053cdeb446fe27b3e",
            "dhcp_options_id": "dopt-00208d2f665cdfafe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f9ef32abbe86796",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fcd6f5c6c7833aff",
            "owner_id": "228067644494",
            "tags": {
              "Name": "env"
            },
            "tags_all": {
              "Name": "env"
            }
          }
        }
      ]
    }
  ]
}